# audiosync

./: AudioSync.jucer  CMakeLists.txt  README.md  README_en.md  README_pl.md  design.md  docs.md  fallback_docs.md  gen_audio_ltc_track.py  gen_test_tracks.py  what_was_missing.md
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedGroupMemory.h
docs/: audio-fallback.md  docs.md  master-slave-architecture.md  quality_scoring.md  writeup-notes.md
